<resources>
    <string name="app_name">Melevio</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="playlist_btn">Playlist</string>
    <string name="favlist_btn">Favorites</string>
    <string name="totalSong">Total Songs</string>
    <string name="song_name">Song name</string>
    <string name="song_album">Song Album</string>
    <string name="backButton">Back Button</string>
    <string name="start_tv">00.00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="timer">Timer</string>
    <string name="share">Share</string>

    <string name="previous">Share</string>
    <string name="play">Share</string>
    <string name="pause">Share</string>
    <string name="next">Share</string>

    <string name="add_playlist">Add</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_ic">Icon</string>
    <string name="welcome">Welcome To, \nMelovio</string>

    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
</resources>
