<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_ic"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            app:tint="@color/black"
            android:contentDescription="@string/backButton"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/fav_empty_ic"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@android:color/holo_red_light"
            android:contentDescription="@string/favlist_btn"
            />


    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="18dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/blue"
        app:strokeWidth="5dp"
        android:src="@drawable/ic_guitar_splash"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_weight="1"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1"
        >

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_ic"
            app:iconSize="40dp"
            android:contentDescription="@string/previous"
            />
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_ic"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"
            android:contentDescription="@string/pause"
            />
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_ic"
            app:iconSize="40dp"
            android:contentDescription="@string/next"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/start_tv"
            android:gravity="center"

            />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/end_tv"
            android:gravity="center"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/repeat_ic"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/repeat"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/equaliser_ic"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/equalizer"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/timer_ic"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/timer"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/share_ic"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/share"
            android:layout_weight="1"
            />



    </LinearLayout>

</LinearLayout>