<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/shuffleBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/shuffle_ic"
                android:text="@string/shuffle_btn"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/favBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favlist_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/favorite_ic"
                android:text="@string/favlist_btn"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/playListBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/playlist_ic"
                android:text="@string/playlist_btn"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalSong"
            android:layout_margin="10dp"
            />

        <view class="androidx.appcompat.app.AlertController$RecycleListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </view>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        >

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>